--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -562,7 +562,7 @@ To establish the color for a given charge, two color interpolations are employed
   \begin{center}
     \includegraphics[width=10cm]{figures/color_gradients.png}
   \end{center}
-  \caption{Color gradients visualizing }
+  \caption{Color gradients representing the possible colors for positive and negative charges.}
   \label{fig:color_gradients}
 \end{figure}
 
@@ -838,7 +838,7 @@ To incorporate this coloring into αCharges, the backend of the application was 
 
 \begin{figure}[htbp]
   \begin{center}
-    \includegraphics[width=\textwidth,frame]{figures/alpha-charges-results.png}
+    \includegraphics[width=\textwidth]{figures/alpha-charges-results.png}
   \end{center}
   \caption[Result page of the αCharges application.]{Result page of the αCharges application. The control for switching to the pLDDT color theme is highlighted in red.}
   \label{fig:alpha-charges-results}
@@ -846,7 +846,7 @@ To incorporate this coloring into αCharges, the backend of the application was 
 
 \begin{figure}[htbp]
   \begin{center}
-    \includegraphics[width=\textwidth,frame]{figures/alphafold_coloring.png}
+    \includegraphics[width=\textwidth]{figures/alphafold_coloring.png}
   \end{center}
   \caption{Coloring of the structure by the pLDDT confidence score.}
   \label{fig:alphafold-coloring}
@@ -863,7 +863,7 @@ Additionally, when the user clicks on an atom in the list, the Mol* viewer is fo
 
 \begin{figure}[htbp]
   \begin{center}
-    \includegraphics[width=\textwidth,frame]{figures/wrong_structure_text.png}
+    \includegraphics[width=\textwidth]{figures/wrong_structure_text.png}
   \end{center}
   \caption{Explanation of error for atom \textit{GLN 33 CD}.}
   \label{fig:wrong_structure_text}
@@ -871,7 +871,7 @@ Additionally, when the user clicks on an atom in the list, the Mol* viewer is fo
 
 \begin{figure}[htbp]
   \begin{center}
-    \includegraphics[width=\textwidth,frame]{figures/wrong_structure_focus.png}
+    \includegraphics[width=\textwidth]{figures/wrong_structure_focus.png}
   \end{center}
   \caption{Focus on the atom GLN 33 CD.}
   \label{fig:wrong_structure_focus}
