--- a/main.bib
+++ b/main.bib
@@ -427,3 +427,17 @@
   year     = {1997}
 }
 
+@online{belford2017anatomy,
+  author  = {Belford, Robert},
+  title   = {Anatomy of a MOL file},
+  url     = {https://chem.libretexts.org/Courses/University_of_Arkansas_Little_Rock/ChemInformatics_(2017)%3A_Chem_4399_5399/2.2%3A_Chemical_Representations_on_Computer%3A_Part_II/2.2.2%3A_Anatomy_of_a_MOL_file},
+  urldate = {2023-05-16}
+} 
+
+
+@online{wikipedia_ctfile,
+  author  = {Wikipedia contributors},
+  title   = {Chemical table file},
+  url     = {https://en.wikipedia.org/wiki/Chemical_table_file},
+  urldate = {2023-05-16}
+} 
